# BrownBelt

./: .gitignore
CMakeProject1/: CMakeLists.txt
CMakeProject1/Booking/: CMakeLists.txt  booking.h  test.cpp
CMakeProject1/Budget/: CMakeLists.txt  budget.cpp
CMakeProject1/Budget2/: budget.cpp
CMakeProject1/BudgetLegacyRefactor/: budget.cpp
CMakeProject1/BusManager/: CMakeLists.txt  a.in  json.cpp  json.h  main.cpp  manager.h  requests.h  utils.h
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
CMakeProject1/Cache/: CMakeLists.txt  Common.h  Solution.cpp  main.cpp
CMakeProject1/Collide/: CMakeLists.txt  collide.cpp  geo2d.cpp
CMakeProject1/CommentServer/: CMakeLists.txt  comment_server.cpp
CMakeProject1/ConcurrentMap2/: CMakeLists.txt  concurrent_map_2.cpp
CMakeProject1/Ebook/: CMakeLists.txt  ebook.cpp
CMakeProject1/Expresses/: CMakeLists.txt  expresses.cpp  test_runner.h
CMakeProject1/Expression/: CMakeLists.txt  common.h  main.cpp
CMakeProject1/ForbiddenDomains/: domains.cpp
CMakeProject1/HashPerson/: CMakeLists.txt  hash_person.cpp
CMakeProject1/HashPoint/: CMakeLists.txt  hash_point.cpp
CMakeProject1/HashSet/: CMakeLists.txt  hash_set.cpp
CMakeProject1/HotelBooking/: CMakeLists.txt  booking.cpp
CMakeProject1/Ini/: CMakeLists.txt  ini.cpp  ini.h  test_ini.cpp  test_runner.h
CMakeProject1/LazyValue/: CMakeLists.txt  lazy_value.cpp
CMakeProject1/ObjectPool/: CMakeLists.txt  object_pool.cpp  profile.h
CMakeProject1/Pipeline/: CMakeLists.txt  pipeline.cpp
CMakeProject1/Polynomial/: CMakeLists.txt  polynomial.cpp
CMakeProject1/PrintStats2/: CMakeLists.txt  print_stats_2.cpp
CMakeProject1/PrintStatsDemographic/: CMakeLists.txt  print_stats.cpp
CMakeProject1/PrintStatsTesting/: CMakeLists.txt  print_stats_testing.cpp  solution_b.h
CMakeProject1/PriorityCollection2/: CMakeLists.txt  priority_collection_2.cpp
CMakeProject1/Refactoring/: CMakeLists.txt  refactoring.cpp  xml.h
CMakeProject1/Restructing/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
CMakeProject1/SecondaryIndex/: CMakeLists.txt  secondary_index.cpp
CMakeProject1/SetIteratorNext/: CMakeLists.txt  set_iterator_next.cpp
(+23 files in other folders)
